--- a/src/style/components/_rollingIcon.scss
+++ b/src/style/components/_rollingIcon.scss
@@ -45,6 +45,45 @@
   }
 }
 
+#light {
+  & #green .rollingIcon__icon {
+    fill: $colorTheme_green-light;
+    stroke: $colorTheme_green-light;
+  }
+  & #blue .rollingIcon__icon {
+    fill: $colorTheme_blue-light;
+    stroke: $colorTheme_blue-light;
+  }
+  & #purple .rollingIcon__icon {
+    fill: $colorTheme_purple-light;
+    stroke: $colorTheme_purple-light;
+  }
+  & #red .rollingIcon__icon {
+    fill: $colorTheme_red-light;
+    stroke: $colorTheme_red-light;
+  }
+  & #yellow .rollingIcon__icon {
+    fill: $colorTheme_yellow-light;
+    stroke: $colorTheme_yellow-light;
+  }
+
+  & #green .rollingIcon__text__letter {
+    color: rgba($colorTheme_green-light, 0.8);
+  }
+  & #blue .rollingIcon__text__letter {
+    color: rgba($colorTheme_blue-light, 0.8);
+  }
+  & #purple .rollingIcon__text__letter {
+    color: rgba($colorTheme_purple-light, 0.8);
+  }
+  & #red .rollingIcon__text__letter {
+    color: rgba($colorTheme_red-light, 0.8);
+  }
+  & #yellow .rollingIcon__text__letter {
+    color: rgba($colorTheme_yellow-light, 0.8);
+  }
+}
+
 #green .rollingIcon__icon {
   fill: $colorTheme_green;
   stroke: $colorTheme_green;
